--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "waview"
 version = "0.1.1"
-description = "A Tauri App"
+description = "🌊 WaView - Simple and tiny CSV waveform viewer"
 authors = ["suous"]
 edition = "2021"
 
@@ -11,9 +11,8 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "dialog-all", "path-all", "fs-write-file"] }
+tauri = { version = "1", features = ["dialog-all", "path-all", "fs-write-file"] }
 serde = { version = "1", features = ["derive"] }
-serde_json = "1"
 flate2 = "1.0.33"
 csv = "1.3.0"
 
