--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.1",
-    "@mui/material": "^6.1.1",
-    "@tauri-apps/api": "^1.6.0",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
+    "@tauri-apps/api": "^2.0.2",
+    "@tauri-apps/plugin-dialog": "~2",
+    "@tauri-apps/plugin-fs": "^2.0.0",
     "chart.js": "^4.4.4",
     "chartjs-plugin-zoom": "^2.0.1",
-    "i18next": "^23.15.1",
+    "i18next": "^23.15.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
@@ -27,22 +29,22 @@
     "react-i18next": "^15.0.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.1",
-    "@tauri-apps/cli": "^1.6.2",
-    "@types/react": "^18.3.9",
-    "@types/react-color": "^3.0.12",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9.11.1",
+    "@vitejs/plugin-react": "^4.3.2",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.8",
+    "@tauri-apps/cli": "^2.0.2",
+    "@eslint/js": "^9.12.0",
+    "@types/react-color": "^3.0.12",
+    "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.0",
-    "globals": "^15.9.0",
+    "eslint-plugin-react": "^7.37.1",
+    "globals": "^15.11.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "prettier": "3.3.3",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "typescript-eslint": "^8.8.1"
   }
 }
