--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -7,22 +7,31 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+# The `_lib` suffix may seem redundant but it is necessary
+# to make the lib name unique and wouldn't conflict with the bin name.
+# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
+name = "waview_lib"
+crate-type = ["staticlib", "cdylib", "rlib"]
+
 [build-dependencies]
-tauri-build = { version = "1", features = [] }
+tauri-build = { version = "2.0.0", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = ["dialog-all", "path-all", "fs-write-file"] }
+tauri = { version = "2.0.0", features = [] }
 serde = { version = "1", features = ["derive"] }
-flate2 = "1.0.33"
 csv = "1.3.0"
+flate2 = "1.0.34"
+tauri-plugin-dialog = "2"
+tauri-plugin-fs = "2"
+serde_json = "1.0.128"
 
-[features]
-# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
-custom-protocol = ["tauri/custom-protocol"]
+[profile.dev]
+incremental = true # Compile your binary in smaller steps.
 
 [profile.release]
-panic = "abort" # Strip expensive panic clean-up logic
-codegen-units = 1 # Compile crates one after another so the compiler can optimize better
-lto = true # Enables link to optimizations
-opt-level = "z" # Optimize for binary size
-strip = true  # Automatically strip symbols from the binary.
+codegen-units = 1 # Allows LLVM to perform better optimization.
+lto = true # Enables link-time-optimizations.
+opt-level = "z" # Prioritizes small binary size. Use `3` if you prefer speed.
+panic = "abort" # Higher performance by disabling panic handlers.
+strip = true # Ensures debug symbols are removed.
