--- a/package.json
+++ b/package.json
@@ -21,22 +21,21 @@
     "@tauri-apps/plugin-fs": "^2.0.0",
     "chart.js": "^4.4.4",
     "chartjs-plugin-zoom": "^2.0.1",
-    "i18next": "^23.15.2",
+    "i18next": "^23.16.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.2"
+    "react-i18next": "^15.0.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "@tauri-apps/cli": "^2.0.3",
+    "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.2",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.8",
-    "@tauri-apps/cli": "^2.0.2",
-    "@eslint/js": "^9.12.0",
-    "@types/react-color": "^3.0.12",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -45,6 +44,8 @@
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "prettier": "3.3.3",
-    "typescript-eslint": "^8.8.1"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.8.1",
+    "vite": "^5.4.9"
   }
 }
