--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,16 +15,17 @@ name = "waview_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.0.0", features = [] }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0", features = [] }
+tauri = { version = "2", features = [] }
+tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
-csv = "1.3.0"
-flate2 = "1.0.34"
+csv = "1"
+flate2 = "1"
 tauri-plugin-dialog = "2"
 tauri-plugin-fs = "2"
-serde_json = "1.0.128"
+serde_json = "1"
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
